Reformat the code with Optional, combining the LogEntryParams and LogEntry classes with annotations and making changes to the tests